<resources>
    <string name="app_name">ANITA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_your_personal_assistant_for_international_tips_and_advices">Welcome to your personal Network for International Tips and Advices ! Please do sign in</string>
    <string name="anita_logo">ANITA Logo</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="profile">Profile</string>
    <string name="travels">Travels</string>
    <string name="documentation">Documentation</string>
    <string name="tips">Tips</string>
    <string name="jobs">Jobs</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>

    <!-- For the travels -->
    <string name="nav_back">Go back</string>
    <string name="add_travel_title">Add a travel</string>
    <string name="travel_place">Place :</string>
    <string name="travel_country">Country :</string>
    <string name="travel_city">City :</string>
    <string name="travel_institution">Institution :</string>
    <string name="travel_status">Status :</string>
    <string name="travel_dates">Dates :</string>
    <string name="travel_duration">Duration :</string>
    <string name="travel_purpose">Purpose :</string>
    <string name="travel_city_conveyance">Conveyance :</string>
    <string name="travel_city_flate">Flate :</string>
    <string name="travel_check_list">Check List :</string>
    <string name="travel_document">Document :</string>

    <string name="travel_date_from">from</string>
    <string name="travel_date_to">to</string>

    <string name="travel_status_in_progress">currently in the country</string>
    <string name="travel_status_in_preparation">travel in preparation</string>
    <string name="travel_status_over">travel is over</string>

    <string name="travel_duration_year">year(s)</string>
    <string name="travel_duration_semester">semester(s)</string>
    <string name="travel_duration_month">month(s)</string>
    <string name="travel_duration_day">day(s)</string>

    <string-array name="travel_duration_type_array">
        <item>@string/travel_duration_year</item>
        <item>@string/travel_duration_semester</item>
        <item>@string/travel_duration_month</item>
        <item>@string/travel_duration_day</item>
    </string-array>

    <!-- Navigation -->
    <string name="nav_next">Next</string>
    <string name="nav_previous">Previous</string>
    <string name="nav_validate">Validate</string>
    <string name="nav_profile_post">POST</string>
    <string name="nav_profile_travel">TRAVEL</string>
    <string name="nav_profile_badge">BADGE</string>

</resources>